libqt6c/src/libqcolor.hpp

typedef struct QColor QColor;
void QColor_GetHsv4(const QColor* self, int* h, int* s, int* v, int* a);
void QColor_SetHsv4(QColor* self, int h, int s, int v, int a);
void QColor_GetHsvF4(const QColor* self, float* h, float* s, float* v, float* a);
void QColor_SetHsvF4(QColor* self, float h, float s, float v, float a);
void QColor_GetCmyk5(const QColor* self, int* c, int* m, int* y, int* k, int* a);
void QColor_SetCmyk5(QColor* self, int c, int m, int y, int k, int a);
void QColor_GetCmykF5(const QColor* self, float* c, float* m, float* y, float* k, float* a);
void QColor_SetCmykF5(QColor* self, float c, float m, float y, float k, float a);
void QColor_GetHsl4(const QColor* self, int* h, int* s, int* l, int* a);
void QColor_SetHsl4(QColor* self, int h, int s, int l, int a);
void QColor_GetHslF4(const QColor* self, float* h, float* s, float* l, float* a);
void QColor_SetHslF4(QColor* self, float h, float s, float l, float a);
QColor* QColor_FromRgb4(int r, int g, int b, int a);
QColor* QColor_FromRgbF4(float r, float g, float b, float a);
QColor* QColor_FromRgba644(uint16_t r, uint16_t g, uint16_t b, uint16_t a);
QColor* QColor_FromHsv4(int h, int s, int v, int a);
QColor* QColor_FromHsvF4(float h, float s, float v, float a);
QColor* QColor_FromCmyk5(int c, int m, int y, int k, int a);
QColor* QColor_FromCmykF5(float c, float m, float y, float k, float a);
QColor* QColor_FromHsl4(int h, int s, int l, int a);
QColor* QColor_FromHslF4(float h, float s, float l, float a);
QColor* QColor_Lighter1(const QColor* self, int f);
QColor* QColor_Darker1(const QColor* self, int f);