QtBeef/src/Qt/qcolor.bf

	[LinkName("QColor_GetHsv4")]
	public static extern void QColor_GetHsv4(QColor_Ptr* self, c_int* h, c_int* s, c_int* v, c_int* a);
	[LinkName("QColor_SetHsv4")]
	public static extern void QColor_SetHsv4(QColor_Ptr* self, c_int h, c_int s, c_int v, c_int a);
	[LinkName("QColor_GetHsvF4")]
	public static extern void QColor_GetHsvF4(QColor_Ptr* self, float* h, float* s, float* v, float* a);
	[LinkName("QColor_SetHsvF4")]
	public static extern void QColor_SetHsvF4(QColor_Ptr* self, float h, float s, float v, float a);
	[LinkName("QColor_GetCmyk5")]
	public static extern void QColor_GetCmyk5(QColor_Ptr* self, c_int* c, c_int* m, c_int* y, c_int* k, c_int* a);
	[LinkName("QColor_SetCmyk5")]
	public static extern void QColor_SetCmyk5(QColor_Ptr* self, c_int c, c_int m, c_int y, c_int k, c_int a);
	[LinkName("QColor_GetCmykF5")]
	public static extern void QColor_GetCmykF5(QColor_Ptr* self, float* c, float* m, float* y, float* k, float* a);
	[LinkName("QColor_SetCmykF5")]
	public static extern void QColor_SetCmykF5(QColor_Ptr* self, float c, float m, float y, float k, float a);
	[LinkName("QColor_GetHsl4")]
	public static extern void QColor_GetHsl4(QColor_Ptr* self, c_int* h, c_int* s, c_int* l, c_int* a);
	[LinkName("QColor_SetHsl4")]
	public static extern void QColor_SetHsl4(QColor_Ptr* self, c_int h, c_int s, c_int l, c_int a);
	[LinkName("QColor_GetHslF4")]
	public static extern void QColor_GetHslF4(QColor_Ptr* self, float* h, float* s, float* l, float* a);
	[LinkName("QColor_SetHslF4")]
	public static extern void QColor_SetHslF4(QColor_Ptr* self, float h, float s, float l, float a);
	[LinkName("QColor_FromRgb4")]
	public static extern QColor_Ptr* QColor_FromRgb4(c_int r, c_int g, c_int b, c_int a);
	[LinkName("QColor_FromRgbF4")]
	public static extern QColor_Ptr* QColor_FromRgbF4(float r, float g, float b, float a);
	[LinkName("QColor_FromRgba644")]
	public static extern QColor_Ptr* QColor_FromRgba644(c_ushort r, c_ushort g, c_ushort b, c_ushort a);
	[LinkName("QColor_FromHsv4")]
	public static extern QColor_Ptr* QColor_FromHsv4(c_int h, c_int s, c_int v, c_int a);
	[LinkName("QColor_FromHsvF4")]
	public static extern QColor_Ptr* QColor_FromHsvF4(float h, float s, float v, float a);
	[LinkName("QColor_FromCmyk5")]
	public static extern QColor_Ptr* QColor_FromCmyk5(c_int c, c_int m, c_int y, c_int k, c_int a);
	[LinkName("QColor_FromCmykF5")]
	public static extern QColor_Ptr* QColor_FromCmykF5(float c, float m, float y, float k, float a);
	[LinkName("QColor_FromHsl4")]
	public static extern QColor_Ptr* QColor_FromHsl4(c_int h, c_int s, c_int l, c_int a);
	[LinkName("QColor_FromHslF4")]
	public static extern QColor_Ptr* QColor_FromHslF4(float h, float s, float l, float a);
	[LinkName("QColor_Lighter1")]
	public static extern QColor_Ptr* QColor_Lighter1(QColor_Ptr* self, c_int f);
	[LinkName("QColor_Darker1")]
	public static extern QColor_Ptr* QColor_Darker1(QColor_Ptr* self, c_int f);
}
